--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "puppeteer": "^19.7.4",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "webpack": "^5.102.1"
   }
 }
