--- a/client/angular.json
+++ b/client/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/material-theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -96,6 +97,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/material-theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
