feat: implement complete backend payment gateway with Razorpay
- Add Payment entity with Razorpay order/payment IDs
- Create PaymentOrderRequest, PaymentOrderResponse, PaymentVerificationRequest DTOs
- Implement PaymentRepository with custom query methods
- Add PaymentService with order creation, signature verification, booking creation
- Create PaymentController with REST endpoints for payment operations
- Add Razorpay Java SDK dependency to pom.xml
- Configure Razorpay properties in application.properties
- Add comprehensive API_KEYS_SETUP.md with security best practices
- Update PAYMENT_INTEGRATION.md with API key storage instructions

Backend endpoints:
- POST /api/payment/create-order - Create Razorpay order
- POST /api/payment/verify - Verify payment and create booking
- GET /api/payment/status/{paymentId} - Get payment status
- GET /api/payment/booking/{bookingId} - Get payment by booking

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,21 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=5000
 
+# ==========================================
+# RAZORPAY PAYMENT GATEWAY CONFIGURATION
+# ==========================================
+# Get your keys from: https://dashboard.razorpay.com/app/keys
+# For development, use TEST keys (starts with rzp_test_)
+# For production, use LIVE keys (starts with rzp_live_)
+
+razorpay.key.id=rzp_test_YOUR_KEY_ID_HERE
+razorpay.key.secret=YOUR_KEY_SECRET_HERE
+razorpay.currency=INR
+
+# IMPORTANT SECURITY NOTES:
+# 1. Never commit real API keys to version control
+# 2. Use environment variables for production
+# 3. Keep Key Secret confidential
+# 4. Rotate keys periodically
+# 5. Use different keys for test and production
+
